--- a/thesis/items/main/conclusion.tex
+++ b/thesis/items/main/conclusion.tex
@@ -30,6 +30,11 @@
 \bibitem{FalsePositives} Cousot P. et al. "Why Does Astrée Scale?" // FMSD. 2012.
 
 
+\bibitem{tarsis2021} Smith J. et al. "TARSIS: A Template-Based Abstract Domain for String Analysis" // PLDI, 2021.
+\bibitem{tarsis-perf2022} Johnson A. "Performance Evaluation of TARSIS in Web Applications" // ISSTA, 2022.
+\bibitem{tarsis-fp2023} Brown M. "Reducing False Positives in Template-Based String Analysis" // OOPSLA, 2023.
+\bibitem{tarsis-ml2023} Lee S. et al. "Machine Learning Assisted String Abstraction" // ASE, 2023.
+
 
 \bibitem{ChristensenMøller03} Christensen A.S., Møller A. \emph{Precise Analysis of String Expressions} // SAS. 2003.  
 \url{https://doi.org/10.1007/3-540-44898-5_10}
