--- a/thesis/items/realization/realization.tex
+++ b/thesis/items/realization/realization.tex
@@ -49,29 +49,66 @@
 Операции join и meet аналогичны union и intersect для автоматов. Остается только разобрать случаи, когда один из аргументов $\top$ или $\bot$. 
 
 \subsubsection*{strictEquals}
-Проверяем, что 2 автомата порождают одинаковые языки. В общем случае можем проверить то, что один язык включается в другой и наоборот. Однако операция пересечения слишком громоздкая (нужно сделать 3 раза дополнение), поэтому для конечных языков проще выписать 2 порождаемых языка и проверить их на соответствие. Язык является конечным, если в нем нет $\top$ переходов и циклов
+Проверяем, что 2 автомата порождают одинаковые языки. В общем случае можем проверить то, что один язык включается в другой (subset) и наоборот. Однако операция пересечения слишком громоздкая (нужно сделать 3 раза дополнение), поэтому для конечных языков проще выписать 2 порождаемых языка и проверить их на соответствие. Язык является конечным, если в нем нет $\top$ переходов и циклов
 
 \subsubsection*{equals}
-В отличие от strictEquals, equals проверяет то, что есть хоть одно общее слово. Опять это можно сделать при помощи пересечения, но для конечных лучше сравнивать языки
+В отличие от strictEquals, equals проверяет то, что есть хоть одно общее слово. Опять это можно сделать при помощи пересечения, то есть что пересечение не пусто. Но для конечных лучше сравнивать языки
+
+
+
+
 
 \newpage
 \subsection{Операции на строках}
 \subsubsection*{Length}
-Возвращает интервал $[c_1, c_2]$, такой что $c_1 \leq |s| \leq c_2$. При этом если $s$ содержит в себе цикл, или же содержит в себе переход, на котором стоит $\top$, то есть любая строка, то максимальная длина будет сколь угодно большой. Минимальная при этом заменяет все топы на пустые строки.
+Возвращает интервал $[c_1, c_2]$, такой что $c_1 \leq |s| \leq c_2$. При этом если $s$ содержит в себе цикл, или же содержит в себе переход, на котором стоит $\top$, то есть любая строка, то максимальная длина будет сколь угодно большой. Минимальная при этом заменяет все топы на пустые строки
 \begin{figure}[H]
 \includegraphics[width=\textwidth]{images/tarsis-length.png}\hfill
 \end{figure}
-    
+
+Для подсчета длины запускаем DFS из начальных стейтов. При вхождении в конечную, считаем длину пути (заменяя $\top$ на $0$ или $+\infty$ соответственно) и пересчитываем максимальную и минимальную длину
+
+Если автомат содержит в себе цикл, то с помощью DFS мы его найдем и максимальная длина пути будет бесконечной, так как можно по этому циклу крутиться сколь угодно много раз
 
 \subsubsection*{Concat}
-\subsubsection*{Contains}
+При конкатенации достаточно добавить для первого автомата одну дополнительную конечную вершину, в которую будут вести переходы с пустой строкой из конечных вершин первого, а затем из нее ведут переходы в начальные вершины второго автомата. Далее стоит минимизировать полученный автомат, чтобы избавиться от пустых ребер
 
+\newpage
+\subsubsection*{Contains}
+Абстрактная семантика contains должна возвращать значение true, если любая строка из A' содержится в любой строке из A, значение false, если какая-то строка из A' не содержится в какой-то строке из A и \{true, false\} ($\top$) в остальных случаях
 \begin{figure}[H]
 \includegraphics[width=\textwidth]{images/tarsis-contains.png}\hfill
 \end{figure}
-        
+Для начала определим, в каком случае нужно возвращать false. Для этого определим фактор-автоматон FA(A), который принимает все подстроки A. Для этого нужно просто пометить все стейты конечными. Затем пересечь FA(A) и A', чтобы проверить, что никакая подстрока любой строки из A не является строкой из A'
+
+Теперь, в каком случае true. Если A' содержит 2 слова, ни одно из которых не является префиксом другого, то они оба не могут быть одновременно префиксами какого-либо слова из A. Значит все слова в A' должны быть по цепочке включены друг в друга. Или же автомат для них выглядит как путь, некоторые вершины на котором конечные. И в этом случае достаточно проверить, что самое длинное слово входит во все слова из A, тогда и его префиксы будут
+
+Во всех остальных случаях точного ответа нет, поэтому возвращаем $\top$
+
+\newpage
 \subsubsection*{IndexOf}
 
-\subsubsection*{Substr}
+\begin{figure}[H]
+\includegraphics[width=\textwidth]{images/tarsis-indexOf.png}\hfill
+\end{figure}
 
+\newpage
+\subsubsection*{Substr}
+\begin{figure}[H]
+\includegraphics[width=\textwidth]{images/tarsis-substr.png}\hfill
+\end{figure}
+
+\begin{figure}[H]
+\includegraphics[width=\textwidth]{images/tarsis-SB-algo.png}\hfill
+\end{figure}
+
+
+\newpage
 \subsubsection*{Replace}
+\begin{figure}[H]
+\includegraphics[width=\textwidth]{images/tarsis-replace.png}\hfill
+\end{figure}
+
+\begin{figure}[H]
+\includegraphics[width=\textwidth]{images/tarsis-RP-algo.png}\hfill
+\end{figure}
