--- a/thesis/items/main/conclusion.tex
+++ b/thesis/items/main/conclusion.tex
@@ -35,6 +35,7 @@
 \bibitem{tarsis-fp2023} Brown M. "Reducing False Positives in Template-Based String Analysis" // OOPSLA, 2023.
 \bibitem{tarsis-ml2023} Lee S. et al. "Machine Learning Assisted String Abstraction" // ASE, 2023.
 
+\bibitem{widening}  D’Silva, V.: Widening for Automata. MsC Thesis, Inst. Fur Inform.- UZH (2006)
 
 \bibitem{ChristensenMøller03} Christensen A.S., Møller A. \emph{Precise Analysis of String Expressions} // SAS. 2003.  
 \url{https://doi.org/10.1007/3-540-44898-5_10}
