--- a/thesis/items/realization/realization.tex
+++ b/thesis/items/realization/realization.tex
@@ -1,5 +1,9 @@
 \section{Реализация}
 
+\subsubsection*{Анализатор:}
+Есть работающий анализатор, основанный на абстрактной интерпретации. Поддерживаемые языки - JavaScript, TypeScript, ArkTs. Анализируемый код переводится в промежуточное представление, AST и затем в Control Flow Graph (CFG). Реализован интерфейс для решёток, интервалы для целых чисел и строковая решётка из JSAI, которую необходимо улучшить
+
+TODO : Картинка
 \subsubsection*{Необходимо реализовать:}
 \begin{itemize}
     \item Структуру автоматона, функции для работы с ним
@@ -19,6 +23,7 @@
 \subsection{Структура}
 Сама структура автомата базовая - есть вершины (states) и переходы между ними. Некоторые из стейтов помечены как начальные или как конечные. На переходах стоят строки или символ $\top$, обозначающий любую строку
 
+% \subsubsection*{Операции над множествами строк}
 \subsubsection*{union}
 Основной операцией является объединение автоматов. С её помощью находим наименьший язык, содержащий оба, порождаемых автоматами
 
@@ -43,6 +48,9 @@
 Затем, чтобы избавиться от двух одинаковых входящих переходов, мы делаем reverse, то есть перенаправляем все ребра и помечаем конечные вершины начальными и наоборот. Теперь вызываем еще раз determinize. Повторив еще раз reverse + determinize, получим начальный автомат, но без лишних переходов и вершин
 
 Последним шагом удаляем те вершины, из которых нельзя попасть в финальные. Таким образом получим упрощенную версию того же самого автомата
+
+\subsubsection*{explode}
+\subsubsection*{getLanguage}
 
 \newpage
 \subsection{Операции для решеток}
@@ -226,3 +234,7 @@ function f(v) {
 Склеивать вершины не придется, однако при минимизации $q_0$ и $q_2$ станут одной, то есть получим начальный автомат, что означает отсутствие изменений и значит можно остановиться 
 
 Доказано~\cite{widening}, что такой алгоритм расширения соответствует условиям овер-аппроксимации
+
+
+\newpage
+\subsection{Тестирование}
