--- a/thesis/items/main/conclusion.tex
+++ b/thesis/items/main/conclusion.tex
@@ -1,13 +1,11 @@
-\specialsection{Выводы}
+\section{Результаты}
 
 \newpage
-
-\specialsection{Заключение}
+\subsection{Заключение}
 
 
 \newpage
-
-\specialsection{Благодарность}
+\subsection{Благодарность}
 
 
 \newpage
