--- a/thesis/items/realization/realization.tex
+++ b/thesis/items/realization/realization.tex
@@ -238,3 +238,58 @@ function f(v) {
 
 \newpage
 \subsection{Тестирование}
+Были написаны тесты на новую финкциональность, разберем несколько примеров
+
+\begin{lstlisting}[caption={Пример CWE тестов}]
+function tossCoin(): string {
+    if (Math.Random() > 0.5) {
+        return "eagle"
+    } else {
+        return "tails"
+    }
+}
+
+if (tossCoin() == "edge") {
+    /* POTENTIAL FLAW GOOD: */
+    console.log(document.getElementById('source').value)
+}
+\end{lstlisting}
+    
+В данном примере в консоль выводятся помеченные данные (то есть те, которые влекут за собой уязвимость), если выполняется условие. Для определения абстрактного значения tossCoin(), происходит join двух веток исполнения. В старой строковой решетке результатом был класс обычных строк (NotNumNorSpl). Однако, edge также может принадлежать этому классу, из-за чего сравнение на эквивалентность строк должно возвращать $\top$, что есть возможно true и false. И тогда ветка исполнения, в которой в консоль выводятся опасные данные, также возможна. И значит анализатор указывал на то, что в этой строчке возможна уязвимость, тогда как на деле этого не происходит
+
+С новой решеткой мы точно можем сказать, что ни одно возвращаемое знаение функции tossCoin не равно edge, а следовательно мертвый код игнорируется. Потому можем поставить метку POTENTIAL FLAW GOOD, означающую отсутствие уязвимости
+
+\newpage
+\begin{lstlisting}[caption={Пример IR тестов}]
+function tossCoin(): string {
+    if (Math.Random() > 0.5) {
+        return "eagle"
+    } else {
+        return "tails"
+    }
+}
+
+let x = tossCoin()
+console.log(x.indexOf("a")) // [number: [1, 1]]
+console.log(x.indexOf("e")) // [number: [-1, 4]]
+console.log(x.indexOf("r")) // [number: [-1, -1]]
+\end{lstlisting}
+
+Другой пример тестов это IR (intermidiate representation) тесты. Они проверяют то, какие абстрактные значения принимают переменные. По аналогичным причинам старая решетка не могла как либо оценить значение indexOf. Новая же позволяет это сделать. Благодаря этому, не только строковые значения стали более точными, но и некоторые числовые
+
+
+\begin{lstlisting}[mathescape=true, caption={Еще пример IR тестов}]
+var x = "a" + document.getElementById('source').value + "c"
+console.log(x) // [string: a$\top$c tags=[XSS,WEB]]
+console.log(x.length) // [number: [2, +Inf]]
+console.log(x.startsWith("a")) // [boolean: true]
+console.log(x.substr(0, 1)) // [string: a tags=[XSS,WEB]]
+\end{lstlisting}
+
+В данном примере видно, что даже если в операциях участвует $\top$, все еще можно знать что-то о строке, как напимер минимальную длину или то, что startsWith('a') это всегда true
+
+Также можно увидеть tags=[XSS,WEB]. Это как раз и есть метка, которая указывает на уязвимые данные. И при некоторых операциях она сохраняется, как например конкатенация. Одним из уточнений в будущем может стать то, что эта метка будет принадлежать конкретному переходу, а не всему абстрактному значению. То есть например если сейчас сделать x.substr(0, 1), то результат будет 'a', то есть вообще не содержать опасных символов. Однако метка будет передана
+
+
+\newpage
+\subsection{Результаты}
