--- a/thesis/items/main/intro.tex
+++ b/thesis/items/main/intro.tex
@@ -24,7 +24,9 @@
 
 Основной проблемой является недостаточная точность строковых абстрактных доменов. В некоторых случаях анализ не может корректно определить недостижимость определенных веток исполнения кода, что приводит к ложным срабатываниям и увеличению количества потенциальных ложных ошибок. Это снижает полезность статического анализа, так как разработчики вынуждены разбираться с ложными предупреждениями.
 
-Целью данной работы является оптимизация строковой решетки, используемой в статическом анализе кода на базе абстрактной интерпретации, с целью повышения ее точности.
+Целью данной работы является оптимизация строковой решетки, используемой в статическом анализаторе кода на базе абстрактной интерпретации, с целью повышения ее точности.
+
+TODO ПЕРЕДЕЛАТЬ ЗАДАЧИ
 
 Для достижения этой цели необходимо решить следующие задачи:
 
@@ -35,7 +37,7 @@
 
 \item Разработать и предложить оптимизированный вариант строковой решетки, сочетающий точность анализа и разумное время выполнения. Деградация производительности не должна превышать $20\%$
 
-\item Оценить предложенное решение экспериментально, сравнив его с существующими методами по критериям точности, времени исполнения и потреблению памяти.
+\item Протестировать результат, сравнив его с существующим по критериям точности, времени исполнения и потреблению памяти.
 \end{itemize}
 
 Результатом работы станет усовершенствованная строковая решетка, позволяющая улучшить статический анализ кода за счет более точного представления строковых данных, сокращения ложных срабатываний.
