--- a/thesis/items/realization/realization.tex
+++ b/thesis/items/realization/realization.tex
@@ -1,9 +1,19 @@
 \section{Реализация}
 
 \subsubsection*{Анализатор:}
-Есть работающий анализатор, основанный на абстрактной интерпретации. Поддерживаемые языки - JavaScript, TypeScript, ArkTs. Анализируемый код переводится в промежуточное представление, AST и затем в Control Flow Graph (CFG). Реализован интерфейс для решёток, интервалы для целых чисел и строковая решётка из JSAI, которую необходимо улучшить
+Есть работающий анализатор, основанный на абстрактной интерпретации. Поддерживаемые языки - JavaScript, TypeScript, ArkTS (декларативный язык программирования статических типов, разработанный Huawei). Анализируемый код транспилируется при помощи Babel в промежуточное представление (intermidiate representation). Затем IR с помощью antlr переводится в Control Flow Graph (CFG)
+
+Этот граф передается в абстрактную машину, которая обычные переменные переводит в абстрактные, то есть принимающие множество возможных значений. На некоторые из них вешаются тэги, указывающие на потенциально опасные данные (source). Примером может быть пароль пользователя, sql запрос или открытие файла. Сами по себе эти переменные не являются уязвимостью. Однако если вывести пароль в консоль, или не закрыть файл, то будет плохо. Такие функции, как печать, являются стоком (sink), то есть местом, которые становятся проблемными, если до них доходит зараженная переменная. В итоге для каждого source, который дошел до sink, обратными шагами найдем весь путь уязвимости
+
+Есть еще такой вариант как незакрытый файл. В этом случае наоборот проверяем, что открытая переменная во всех путях исполнения дойдет до места закрытия. Итогом анализа будет репорт, указывающий на найденные уязвимости
 
 TODO : Картинка
+
+Реализован интерфейс для решёток, интервалы для целых чисел и строковая решётка из JSAI, которую необходимо улучшить
+
+
+
+\newpage
 \subsubsection*{Необходимо реализовать:}
 \begin{itemize}
     \item Структуру автоматона, функции для работы с ним
@@ -49,18 +59,23 @@ TODO : Картинка
 
 Последним шагом удаляем те вершины, из которых нельзя попасть в финальные. Таким образом получим упрощенную версию того же самого автомата
 
+TODO ПРИМЕР С КАРТИНКАМИ
+
 \subsubsection*{explode}
+Для реализации сложных операций на строках, такие как Replace и Substr, в которых нужно искать подстроки в автоматах, есть операция, которая переводит автомат к конечному автомату с переходами по буквам. Она просто заменяет каждое ребро на путь, где на каждом переходе лишь один символ вместо целого слова. Также есть обратная операция, которая схлопывает пути в один переход
+
 \subsubsection*{getLanguage}
+Собираем все слова, порождаемые автоматом, с помощью прохода DFS. Если в графе есть цикл, то возможных слов бесконечно, и этот случай нужно отдельно разобрать. Эта операция полезна для оптимизаций в некоторых случаях (далее будет пример)
 
 \newpage
 \subsection{Операции для решеток}
 Операции join и meet аналогичны union и intersect для автоматов. Остается только разобрать случаи, когда один из аргументов $\top$ или $\bot$. 
 
-\subsubsection*{strictEquals}
+\subsubsection*{equals}
 Проверяем, что 2 автомата порождают одинаковые языки. В общем случае можем проверить то, что один язык включается в другой (subset) и наоборот. Однако операция пересечения слишком громоздкая (нужно сделать 3 раза дополнение), поэтому для конечных языков проще выписать 2 порождаемых языка и проверить их на соответствие. Язык является конечным, если в нем нет $\top$ переходов и циклов
 
-\subsubsection*{equals}
-В отличие от strictEquals, equals проверяет то, что есть хоть одно общее слово. Опять это можно сделать при помощи пересечения, то есть что пересечение не пусто. Но для конечных лучше сравнивать языки
+\subsubsection*{strictEquals}
+В отличие от equals, strictEquals проверяет то, что есть хоть одно общее слово. Опять это можно сделать при помощи пересечения, то есть что пересечение не пусто. Но для конечных лучше сравнивать языки
 
 
 
@@ -95,6 +110,8 @@ TODO : Картинка
 
 \newpage
 \subsubsection*{IndexOf}
+
+TODO СКЛЕИТЬ В ОДИН ПУНКТ indexOf, replace, substr
 
 \begin{figure}[H]
 \includegraphics[width=\textwidth]{images/tarsis-indexOf.png}\hfill
@@ -293,3 +310,7 @@ console.log(x.substr(0, 1)) // [string: a tags=[XSS,WEB]]
 
 \newpage
 \subsection{Результаты}
+В результате первого запуска анализатора с встроенной новой строковой решеткой на реальных проектах, время исполнения увеличилось суммарно вдвое. В зависимости от проекта увеличение составило от 10\% до 300\%
+
+TODO табличка, замеры точности
+
