--- a/thesis/items/main/intro.tex
+++ b/thesis/items/main/intro.tex
@@ -30,6 +30,13 @@ TODO ПЕРЕДЕЛАТЬ ЗАДАЧИ
 
 Для достижения этой цели необходимо решить следующие задачи:
 
+Задачи:\\
+1) Проанализировать существующее решение, выявить недостатки\\
+2) Изучить существующие строковые решетки\\
+3) Реализовать более точный вариант строковой решетки\\
+4) Сравнить текущее решение с новым по точности и потребляемым ресурсам
+
+
 \begin{itemize}
 \item Провести исследование существующих методов анализа строк в статическом анализе и выявить их недостатки. В частности, определить, в каких случаях текущие решетки недостаточно точно моделируют поведение строковых данных, приводя к ложным срабатываниям.
 
