--- a/thesis/items/realization/realization.tex
+++ b/thesis/items/realization/realization.tex
@@ -1,7 +1,7 @@
 \section{Реализация}
 
 \subsubsection*{Анализатор:}
-Есть работающий анализатор, основанный на абстрактной интерпретации. Поддерживаемые языки - JavaScript, TypeScript, ArkTS (декларативный язык программирования статических типов, разработанный Huawei). Анализируемый код транспилируется при помощи Babel в промежуточное представление (intermidiate representation). Затем IR с помощью antlr переводится в Control Flow Graph (CFG)
+Есть работающий анализатор, основанный на абстрактной интерпретации. Поддерживаемые языки - JavaScript, TypeScript. Анализируемый код транспилируется при помощи Babel в промежуточное представление (intermidiate representation). Затем IR с помощью antlr переводится в Control Flow Graph (CFG)
 
 Этот граф передается в абстрактную машину, которая обычные переменные переводит в абстрактные, то есть принимающие множество возможных значений. На некоторые из них вешаются тэги, указывающие на потенциально опасные данные (source). Примером может быть пароль пользователя, sql запрос или открытие файла. Сами по себе эти переменные не являются уязвимостью. Однако если вывести пароль в консоль, или не закрыть файл, то будет плохо. Такие функции, как печать, являются стоком (sink), то есть местом, которые становятся проблемными, если до них доходит зараженная переменная. В итоге для каждого source, который дошел до sink, обратными шагами найдем весь путь уязвимости
 
@@ -9,7 +9,7 @@
 
 TODO : Картинка
 
-Реализован интерфейс для решёток, интервалы для целых чисел и строковая решётка из JSAI, которую необходимо улучшить
+Реализован интерфейс для решёток, интервальная решетка для целых чисел и строковая решётка из JSAI, которую необходимо улучшить
 
 
 
