--- a/thesis/items/main/intro.tex
+++ b/thesis/items/main/intro.tex
@@ -24,29 +24,14 @@
 
 Основной проблемой является недостаточная точность строковых абстрактных доменов. В некоторых случаях анализ не может корректно определить недостижимость определенных веток исполнения кода, что приводит к ложным срабатываниям и увеличению количества потенциальных ложных ошибок. Это снижает полезность статического анализа, так как разработчики вынуждены разбираться с ложными предупреждениями.
 
-Целью данной работы является оптимизация строковой решетки, используемой в статическом анализаторе кода на базе абстрактной интерпретации, с целью повышения ее точности.
+Целью данной работы является повышение точности строковой решетки, используемой в статическом анализаторе кода на базе абстрактной интерпретации
 
-TODO ПЕРЕДЕЛАТЬ ЗАДАЧИ
-
-Для достижения этой цели необходимо решить следующие задачи:
-
-Задачи:\\
-1) Проанализировать существующее решение, выявить недостатки\\
-2) Изучить существующие строковые решетки\\
-3) Реализовать более точный вариант строковой решетки\\
-4) Сравнить текущее решение с новым по точности и потребляемым ресурсам
-
+\subsubsection*{Задачи:}
 
 \begin{itemize}
-\item Провести исследование существующих методов анализа строк в статическом анализе и выявить их недостатки. В частности, определить, в каких случаях текущие решетки недостаточно точно моделируют поведение строковых данных, приводя к ложным срабатываниям.
-
-\item Рассмотреть существующие подходы к построению строковых абстрактных доменов.
-
-\item Разработать и предложить оптимизированный вариант строковой решетки, сочетающий точность анализа и разумное время выполнения. Деградация производительности не должна превышать $20\%$
-
-\item Протестировать результат, сравнив его с существующим по критериям точности, времени исполнения и потреблению памяти.
+\item Провести обзор существующих строковых абстрактных доменов
+\item Реализовать более точный вариант строковой решетки на их основе
+\item Провести замеры точности и производительности анализатора
 \end{itemize}
-
-Результатом работы станет усовершенствованная строковая решетка, позволяющая улучшить статический анализ кода за счет более точного представления строковых данных, сокращения ложных срабатываний.
 
 \newpage
